--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
-            <div id="acessibilidade">
-                
+            <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade"class="btn btn-primary fw-bold rotacao-botao">acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="acessibilidade apresentar-lista">
                 <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
                 <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
-
+            </div>
             </div>
             
         </nav>
