--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="botao-acessibilidade"class="btn btn-primary fw-bold rotacao-botao">acessibilidade</button>
+                <button id="botao-acessibilidade"class="btn btn-primary fw-bold rotacao-botao"
+                aria-expanded="false">acessibilidade</button>
                 <div id="opcoes-acessibilidade" class="acessibilidade apresentar-lista">
-                <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
-                <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+                <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="aumentar
+                 o tamanho da fonte">A+</button>
+                <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir
+                o tamanho da fonte">A-</button>
+                <button id="alternar-contraste" class="btn btn-primary fw-bold"> <i class="bi 
+                    bi-shadows"></i></button>
             </div>
             </div>
             
@@ -53,7 +58,7 @@
 
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center">
+                <div class="col-4 d-flex justify-content-center fundo-galeria">
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
